# starnus-sdk

./: .gitignore  LICENSE  README.md  SDK_DOCS.md  pyproject.toml
.github/workflows/: publish.yml
starnus_sdk/: __init__.py  _config.py  _http.py  _websocket.py  client.py
starnus_sdk/cli/: api_keys_cmd.py  artifacts.py  auth.py  billing.py  chat.py  files.py  integrations.py  main.py  projects.py  run.py  tasks.py  threads.py  triggers.py
starnus_sdk/framework/: __init__.py
starnus_sdk/models/: __init__.py  api_key.py  artifact.py  execution.py  file.py  integration.py  plan.py  profile.py  project.py  task.py  thread.py  trigger.py
starnus_sdk/resources/: __init__.py  api_keys.py  artifacts.py  billing.py  executions.py  expert.py  files.py  integrations.py  profile.py  projects.py  support.py  tasks.py  threads.py  triggers.py  updates.py  usage.py
tests/: sdk_e2e_test.py
