[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starnus"
version = "1.0.0"
description = "Official Python SDK and CLI for the Starnus AI platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Starnus Team", email = "support@starnustech.com"}
]
keywords = ["starnus", "ai", "sdk", "automation", "agents", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core consumer SDK deps — minimal footprint
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# Optional: DataFrame integration for artifact import/export
pandas = ["pandas>=2.0.0", "openpyxl>=3.1.0"]

# All optional extras combined
all = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://starnus.com"
Documentation = "https://docs.starnus.com"

[project.scripts]
starnus = "starnus_sdk.cli.main:cli"

# v1 ships without the component (agent-deploy) subsystem.
# Explicitly list only the packages to distribute.
[tool.setuptools]
packages = [
    "starnus_sdk",
    "starnus_sdk.cli",
    "starnus_sdk.framework",
    "starnus_sdk.models",
    "starnus_sdk.resources",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
